--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "test": "vitest",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@vue/test-utils": "^2.3.2",
     "firebase-functions": "^4.2.1",
     "firebase-functions-test": "^3.0.0",
-    "nuxt": "^3.2.3"
+    "jsdom": "^21.1.1",
+    "nuxt": "^3.2.3",
+    "vitest": "^0.29.8"
   },
   "dependencies": {
     "firebase-admin": "^11.5.0",
