--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "test": "vitest",
+    "lint": "eslint --fix .",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -12,6 +13,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
+    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -21,6 +24,7 @@
     "@storybook/vue3": "^6.5.16",
     "@vue/test-utils": "^2.3.2",
     "babel-loader": "^8.3.0",
+    "eslint": "^8.38.0",
     "firebase-functions": "^4.2.1",
     "firebase-functions-test": "^3.0.0",
     "jsdom": "^21.1.1",
