--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   },
   "dependencies": {
     "@firebase/firestore": "^3.9.0",
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/interaction": "^6.1.5",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
     "mdi": "^2.2.43",
