--- a/package.json
+++ b/package.json
@@ -8,27 +8,33 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-essentials": "^7.4.0",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/blocks": "^7.4.0",
+    "@storybook/builder-vite": "^7.4.0",
     "@storybook/testing-library": "^0.0.13",
-    "@storybook/vue3": "^6.5.16",
+    "@storybook/vue3": "^7.4.0",
+    "@storybook/vue3-vite": "^7.4.0",
     "@vue/test-utils": "^2.3.2",
     "babel-loader": "^8.3.0",
     "eslint": "^8.38.0",
+    "eslint-plugin-storybook": "^0.6.13",
     "firebase-functions": "^4.2.1",
     "firebase-functions-test": "^3.0.0",
     "jsdom": "^21.1.1",
     "nuxt": "^3.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.4.0",
     "vitest": "^0.29.8",
     "vue-loader": "^16.8.3"
   },
@@ -42,5 +48,10 @@
     "mdi": "^2.2.43",
     "sass": "^1.58.3",
     "vuetify": "^3.1.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
