--- a/package.json
+++ b/package.json
@@ -24,18 +24,19 @@
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^7.4.0",
     "@storybook/vue3-vite": "^7.4.0",
-    "@vue/test-utils": "^2.3.2",
+    "@vue/test-utils": "^2.4.2",
     "babel-loader": "^8.3.0",
     "eslint": "^8.38.0",
     "eslint-plugin-storybook": "^0.6.13",
     "firebase-functions": "^4.2.1",
     "firebase-functions-test": "^3.0.0",
+    "happy-dom": "^12.10.3",
     "jsdom": "^21.1.1",
     "nuxt": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.4.0",
-    "vitest": "^0.29.8",
+    "vitest": "^0.34.6",
     "vue-loader": "^16.8.3"
   },
   "dependencies": {
